@@ -1,9 +1,9 @@
 Package: zipfR
 Type: Package
 Title: Statistical models for word frequency distributions
-Version: 0.6-5
-Depends: R (>= 2.7.0)
-Date: 2008-11-10
+Version: 0.6-6
+Depends: R (>= 2.10.1)
+Date: 2010-10-04
 Author: Stefan Evert <stefan.evert@uos.de>, Marco Baroni <marco.baroni@unitn.it>
 Maintainer: Stefan Evert <stefan.evert@uos.de>
 Description: Statistical models and utilities for the analysis of word frequency distributions.
